--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
 </section>
 
 <footer>
-  &copy; 2025 Global Indus. All Rights Reserved. | Vadodara, Gujarat, India
+  &copy; 2025 Flowence Solution. All Rights Reserved. | Vadodara, Gujarat, India
 </footer>
 </body>
 </html>
+
